# A-Claude-Skills-Based-Competitive-Intelligence-Tracking-and-Intelligent-Benchmarking-Analysis-System

./: .env.example  .env.staging.example  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  test_llm.py  tests_local.py
app/: __init__.py  demo_peer_subset.py  demo_subset.py  main.py
app/agents/: base.py  contracts.py  (+5 more)
config/: peer_matching.yaml  rag_index_spec.json  real_product_smoke_manifest.yaml  sources.yaml
docs/: API接口文档.md  LD四周工作日志_日期格式调整_详细版.xlsx  agent-contract.md  api-contract.md  architecture.md  cleanup-report.md  codex-prompt-record.md  data-contract.md  deployment-guide.md  development-guide.md  development-log-2026-07-15.md  file-structure.md  frontend-implementation.md  frontend-integration.md  index-spec.md  model-provider-configuration.md  real-e2e-validation.md  report-support.md  team-two-rag-and-agents.md  testing-guide.md  任务边界与验收总说明.md  后端架构与模块边界.md  当前阶段边界与后续扩展.md  接口说明.md  数据与接口约定.md  数据源与采集说明.md  日志.xlsx  测试报告.md  现状审计报告.md  第一阶段任务边界与验收说明.md  项目交接文档.md
frontend/: README.md  index.html  package-lock.json  package.json
modules/: agent_core.py  analysis_chain.py  api_server.py  conversation_crawler.py  data_loader.py  filtering.py  llm_client.py  memory_store.py  rag_chain.py  report_writer.py  skill_core.py  source_manager.py  tools.py
scripts/: prepare_peer_data.py  prepare_real_demo_subset.py  real_http_e2e.py  smoke_multi_product_matching.py  smoke_test.py
tests/: test_api.py  test_data_pipeline.py  test_mock_separation.py  test_rag_analysis.py  test_report.py  test_source_management.py
(+121 files in other folders)
